[gd_scene load_steps=6 format=3 uid="uid://7wq8jy2v0e4b"]

[ext_resource type="Script" uid="uid://3d6sihtk0g3g" path="res://scripts/menus/main_menu.gd" id="1_3kg5v"]
[ext_resource type="Texture2D" uid="uid://xvvykos6jpvb" path="res://textures/level_placeholder.tres" id="2_1t8nw"]
[ext_resource type="PackedScene" uid="uid://bnvthjaufhn5x" path="res://menus/audio_button.tscn" id="3_w3tic"]
[ext_resource type="PackedScene" uid="uid://calgaewey8pnp" path="res://menus/menu_audio.tscn" id="4_hys1b"]

[sub_resource type="LabelSettings" id="LabelSettings_rqbgu"]
font_size = 12

[node name="StartMenu" type="AspectRatioContainer" node_paths=PackedStringArray("title_image_rect")]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3kg5v")
title_image_rect = NodePath("MarginContainer/TextureRect")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_1t8nw")
expand_mode = 2
stretch_mode = 6

[node name="VFlowContainer" type="VFlowContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/v_separation = 16
alignment = 1

[node name="TitleContainer" type="PanelContainer" parent="MarginContainer/VFlowContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VFlowContainer/TitleContainer"]
layout_mode = 2
color = Color(0.2112, 0.33, 0.24090001, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VFlowContainer/TitleContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="TitleLabel" type="Label" parent="MarginContainer/VFlowContainer/TitleContainer/MarginContainer"]
layout_mode = 2
text = "Zombie Game"

[node name="Label" type="Label" parent="MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Tech Demo"
label_settings = SubResource("LabelSettings_rqbgu")
horizontal_alignment = 1

[node name="NewGameButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("3_w3tic")]
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("3_w3tic")]
layout_mode = 2
text = "Load Game"

[node name="ControlsButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("3_w3tic")]
layout_mode = 2
text = "Controls"

[node name="OptionsButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("3_w3tic")]
layout_mode = 2
text = "Options"

[node name="ContactButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("3_w3tic")]
layout_mode = 2
text = "Contact"

[node name="CreditsButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("3_w3tic")]
layout_mode = 2
text = "Credits"

[node name="ExitButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("3_w3tic")]
layout_mode = 2
text = "Exit"

[node name="MenuAudio" parent="." instance=ExtResource("4_hys1b")]

[connection signal="pressed" from="MarginContainer/VFlowContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/LoadGameButton" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/ContactButton" to="." method="_on_contact_button_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/ExitButton" to="." method="_on_exit_pressed"]
